# agent-skills-money-ops

./: .env.example  .gitignore  CLAUDE.md  README.md  README_PDFCONV.md  plugin.json  pyproject.toml  requirements.txt
.claude/: settings.json
.workbench/: alias_rules
docs/: adb-setup.md  naming-rules.md
plan/: 20260411_1302_tax-collect.md  20260412_0646_issue9_xml-sites-collect.md  20260413_1857_issue10_pdf-only-sites-collect.md  20260423_2215_issue25_webull-android-collect.md  20260423_2218_issue27_pdf-to-json-schema-fix.md  20260423_2234_issue32_tax-collect-runner.md  20260424_0006_tax-collect-code-review.md  20260426_1212_issue36_saison-am-collect.md  20260427_0014_issue39_recorder-input-capture.md  20260427_0100_issue41_expense-collect-sbi.md  20260427_0130_issue43_browser-profile-backup.md  20260427_0240_issue45_naming-rules.md  20260427_1233_issue47_recorder-trace-rescue.md  20260427_1251_issue48_is-collected-tests.md  20260427_1320_issue51_expense-collect-nomura.md  20260427_1356_issue53_expense-collect-rakuten.md  20260427_1506_issue55_expense-csv-normalize.md  20260427_1530_issue56_rakuten-dividend.md  20260427_1749_etax_xtx_json.md  initial_money_ops_plan.md
tests/: conftest.py  test_base_collector.py  test_collectors_all.py  test_daiwaconnect_collector.py  test_gmoclick_collector.py  test_hifumi_collector.py  test_matsui_collector.py  test_monex_collector.py  test_mufgesmart_collector.py  test_nomura_collector.py  test_nomura_mochikabu_collector.py  test_paypay_collector.py  test_rakuten_collector.py  test_rakuten_selectors.py  test_registry.py  (+6 more)
(+224 files in other folders)
